--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
     <section id="services-menu" class="services-menu">
         <div class="container">
             <img class="center wow fadeInUp" src="images/lotus-outline.png" width="80px" height="80px" alt="">
-            <h2 class="center wow fadeInUp">MENU OF SERVICES</h2>
+            <h2 class="center wow fadeInUp">Menu Of Services</h2>
             <div class="flex-grid">
                 <div class="col wow fadeInUp">
                     <div class="flex-grid">
@@ -343,7 +343,7 @@
     <section id="waitlist" class="waitlist">
         <div class="container wow fadeInUp">
             <img class="center" src="images/lotus-outline.png" width="80px" height="80px" alt="lotus flower">
-            <h2>Waitlist Form</h2>
+            <h2 class="center wow fadeInUp">Waitlist Form</h2>
             <div class="row">
                 <!-- Begin Mailchimp Signup Form -->
                 <link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css">
@@ -561,9 +561,9 @@
             <div class="container">
                 <img class="center wow fadeInUp" src="images/lotus-outline.png" width="80px" height="80px"
                     alt="lotus flower">
+                    <h2 class="center wow fadeInUp">Ethics</h2>
                 <div class="flex-grid">
                     <div class="col wow fadeInUp">
-                        <h2>Ethics</h2>
                         <p>All services are for therapeutic purposes only. Please do not contact Sacred Paradise Spa if
                             you are seeking any kind of illegal/inappropriate sexual or erotic/sensual services. Sexual
                             advances will not be tolerated at our spa. Any inappropriate behaviors will result in the
