--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
     <!-- Google Analytics-->
 
     <!-- Google Fonts-->
-    <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@400&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Libre+Caslon+Text:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
 
 </head>
@@ -42,8 +44,7 @@
     <!-- Header Content -->
     <header role="banner">
         <div class="row">
-            <a href="index.html" class="header-logo"><img src="images/sps-logo-white.png" alt="Sacred Paradise Spa Logo"
-                    srcset="images/sps-logo-white.svg" height="100%" width="480"></a>
+            <img class="header-logo" src="images/sps-logo-white.png" alt="Sacred Paradise Spa Logo" srcset="images/sps-logo-white.svg" height="100%" width="480">
         </div>
         <div class="row">
             <div class="primary-nav">
@@ -89,7 +90,7 @@
     <section id="hero" class="hero">
         <div class="hero-image"></div>
         <div class="hero-content">
-            <h1>We're Your Oasis Of Relaxation</h1>
+            <h1>We’re Your Oasis Of Relaxation</h1>
             <a href="https://www.massagebook.com/Philadelphia~Massage~SacredParadiseSpa" target="_blank" rel="noopener"
                 class="button">Book Now 7203 G-Town</a>
             <a href="https://www.massagebook.com/therapists/SacredParadiseSpa/gift-certificates" target="_blank"
@@ -104,14 +105,14 @@
         <div class="container">
             <div class="row">
                 <img class="center wow fadeInUp" src="images/lotus-outline.png" width="80px" height="80px" alt="">
-                <h2 class="center wow fadeInUp">Sacred Paradise Spa Inc – Philadelphia’s top-rated wellness center offering customized massage therapy, healing, weight loss solutions and holistic wellness. Experience the best in therapeutic massage, body contouring, cupping, reflexology, stretch therapy, and skin care.</h2>
+                <h3 class="center wow fadeInUp">Sacred Paradise Spa Inc – Philadelphia’s top-rated wellness center offering customized massage therapy, healing, weight loss solutions and holistic wellness. Experience the best in therapeutic massage, body contouring, cupping, reflexology, stretch therapy, and skin care.</h3>
             </div>
         </div>
     </section>
 
     <!-- SECTION WELLNESS TEAM -->
     <section id="wellness" class="wellness">
-        <div><h1 class="wow fadeInUp">YOUR WELLNESS TEAM</h1></div>
+        <div><h2 class="wow fadeInUp">YOUR WELLNESS TEAM</h></div>
     </section>
 
     <!-- SECTION TEAM  -->
@@ -120,61 +121,59 @@
             <div class="col wow fadeInUp">
                 <div class="team-photo team1"></div>
                 <div class="team-content">
-                    <h2>Carolina Ruiz</h2>
-                    <h3>Medical Assistant for Physician, Medical Aesthetician, Medical Massage Therapist, Stretch Therapist, Body Sculpt Tech</h3>
+                    <h3>Carolina Ruiz</h3>
+                    <h4>Medical Assistant for Physician, Medical Aesthetician, Medical Massage Therapist, Stretch Therapist, Body Sculpt Tech</h4>
                 </div>
             </div>
             <div class="col wow fadeInUp">
                 <div class="team-photo team2"></div>
                 <div class="team-content">
-                    <h2>Abrina Idun</h2>
-                    <h3>Master Esthecian, Reflexologist</h3>
+                    <h3>Abrina Idun</h3>
+                    <h4>Master Esthecian, Reflexologist</h4>
                 </div>
             </div>
             <div class="col wow fadeInUp">
                 <div class="team-photo team3"></div>
                 <div class="team-content">
-                    <h2>Victoria Santiago</h2>
-                    <h3>MT, CCMA, CST, Reflexologist, Body Sculpt Tech</h3>
+                    <h3>Victoria Santiago</h3>
+                    <h4>MT, CCMA, CST, Reflexologist, Body Sculpt Tech</h4>
                 </div>
             </div>
-        </div>
-        <div class="flex-grid">
             <div class="col wow fadeInUp">
                 <div class="team-photo team4"></div>
                 <div class="team-content">
-                    <h2>Maria S.</h2>
-                    <h3>Esthecian, MT</h3>
-                </div>
-            </div>
-            <div class="col wow fadeInUp">
-                <div class="team-photo team5"></div>
-                <div class="team-content">
-                    <h2>Kaheem Evans</h2>
-                    <h3>MT, CST, Body Sculpt Tech</h3>
+                    <h3>Maria S.</h3>
+                    <h4>Esthecian, MT</h4>
                 </div>
             </div>
         </div>
         <div class="flex-grid">
+                        <div class="col wow fadeInUp">
+                <div class="team-photo team5"></div>
+                <div class="team-content">
+                    <h3>Kaheem Evans</h3>
+                    <h4>MT, CST, Body Sculpt Tech</h4>
+                </div>
+            </div>
             <div class="col wow fadeInUp">
                 <div class="team-photo team7"></div>
                 <div class="team-content">
-                    <h2>Flor Richiez</h2>
-                    <h3>Esthetician, MT</h3>
+                    <h3>Flor Richiez</h3>
+                    <h4>Esthetician, MT</h4>
                 </div>
             </div>
             <div class="col wow fadeInUp">
                 <div class="team-photo team8"></div>
                 <div class="team-content">
-                    <h2>Michael M.</h2>
-                    <h3>CCMA, Massage Therapist, Medical Assistant for Physician, Stretch Therapist, Body Sculpt Tech</h3>
+                    <h3>Michael M.</h3>
+                    <h4>CCMA, Massage Therapist, Medical Assistant for Physician, Stretch Therapist, Body Sculpt Tech</h4>
                 </div>    
             </div>
             <div class="col wow fadeInUp">
                 <div class="team-photo team9"></div>
                 <div class="team-content">
-                    <h2>Yvette Stevenson</h2>
-                    <h3>MSN, APRN, FNP-C, Medical Director</h3>
+                    <h3>Yvette Stevenson</h3>
+                    <h4>MSN, APRN, FNP-C, Medical Director</h4>
                 </div>
             </div>
         </div>
@@ -186,27 +185,27 @@
             <h1 class="center wow fadeInUp">We Have Various Payment Options for Our Clients</h1>
             <div class="flex-grid-thirds">
                 <div class="col wow fadeInUp">
-                    <h2>With our facility being an essential business, our loyal customers payment options their for
-                        fitness & alternative therapies.</h2>
+                    <p>With our facility being an essential business, our loyal customers payment options their for
+                        fitness & alternative therapies.</p>
                 </div>
                 <div class="col wow fadeInUp">
-                    <h3>
-                        Sacred Paradise Spa
+                    <p>
+                        <strong>Sacred Paradise Spa</strong>
                         <ul>
                             <li>NPI 1285997809</li>
                             <li>Taxonomy Code 225700000X</li>
                             <li>Medical Massage MSG005498</li>
                         </ul>
-                    </h3>
+                    </p>
                 </div>
                 <div class="col wow fadeInUp">
-                    <h3>
-                        We are Currently Accepting
+                    <p>
+                        <strong>We are Currently Accepting</strong>
                         <ul>
                             <li>Health Savings Account</li>
                             <li>Flex Spending Account</li>
                         </ul>
-                    </h3>
+                    </p>
                 </div>
             </div>
         </div>
@@ -339,7 +338,7 @@
                 </div>
             </div>
     </section>
-    <!-- SECTION SERVICES MENU -->
+    <!-- SECTION WAITLIST -->
     <section id="waitlist" class="waitlist">
         <div class="container wow fadeInUp">
             <img class="center" src="images/lotus-outline.png" width="80px" height="80px" alt="lotus flower">
@@ -507,7 +506,7 @@
     <!-- SECTION BOOK APPOINTMENT -->
     <section id="book-now" class="book-now">
         <div class="row center">
-            <h1>Book Online Today</h1>
+            <h2>Book Online Today</h2>
             <a href="https://www.massagebook.com/Philadelphia~Massage~SacredParadiseSpa" target="_blank" rel="noopener"
                 class="button wow fadeInUp">Book Now 7203 G-Town</a>
             <a href="https://www.massagebook.com/therapists/SacredParadiseSpa/gift-certificates" target="_blank"
@@ -561,7 +560,7 @@
             <div class="container">
                 <img class="center wow fadeInUp" src="images/lotus-outline.png" width="80px" height="80px"
                     alt="lotus flower">
-                    <h2 class="center wow fadeInUp">Ethics</h2>
+                    <h2 class="wow fadeInUp">Ethics</h2>
                 <div class="flex-grid">
                     <div class="col wow fadeInUp">
                         <p>All services are for therapeutic purposes only. Please do not contact Sacred Paradise Spa if
@@ -616,27 +615,25 @@
             <div class="container">
                 <div class="flex-grid">
                     <div class="col center wow fadeInUp">
-                        <h4>SPA LOCATION 1</h4>
+                        <h3>SPA LOCATION 1</h3>
                         <p>7203 Germantown Avenue<br />
                             Philadelphia, PA 19119<br />
                             License: #718166</p>
                     </div>
                     <div class="col center wow fadeInUp">
-                        <h4>SPA LOCATION 2</h4>
+                        <h3>SPA LOCATION 2</h3>
                         <p>7224 Germantown Avenue<br />
                             Philadelphia, PA 19119<br />
                             <strong>By appointment only.</strong>
                         </p>
                     </div>
-                    
                     <div class="col center wow fadeInUp">
-                        <h4>PHONE + EMAIL</h4>
+                        <h3>PHONE + EMAIL</h3>
                         <p><strong>Phone:</strong> (215) 279-3432</p>
                         <p><strong>Email:</strong> carolina@sacredparadisespa.com</p>
                     </div>
-                    
                     <div class="col center wow fadeInUp">
-                        <h4>Hours</h4>
+                        <h3>HOURS</h3>
                         <p>MON - FRI: 9 AM - 9 PM<br />
                             SAT: 10 AM - 7 PM<br />
                             SUN: 9 AM - 6 PM
