--- a/index.html
+++ b/index.html
@@ -189,23 +189,19 @@
                         fitness & alternative therapies.</p>
                 </div>
                 <div class="col wow fadeInUp">
-                    <p>
-                        <strong>Sacred Paradise Spa</strong>
+                    <p><strong>Sacred Paradise Spa</strong></p>
                         <ul>
                             <li>NPI 1285997809</li>
                             <li>Taxonomy Code 225700000X</li>
                             <li>Medical Massage MSG005498</li>
                         </ul>
-                    </p>
                 </div>
                 <div class="col wow fadeInUp">
-                    <p>
-                        <strong>We are Currently Accepting</strong>
+                    <p><strong>We are Currently Accepting</strong></p>
                         <ul>
                             <li>Health Savings Account</li>
                             <li>Flex Spending Account</li>
                         </ul>
-                    </p>
                 </div>
             </div>
         </div>
