--- a/index.html
+++ b/index.html
@@ -131,21 +131,21 @@
                 <div class="team-photo team2"></div>
                 <div class="team-content">
                     <h3>Abrina I.</h3>
-                    <h4>Master Esthecian, Reflexologist</h4>
+                    <h4>Master Esthecian, Reflexologist, Bodywork Practitioner</h4>
                 </div>
             </div>
             <div class="col wow fadeInUp">
                 <div class="team-photo team3"></div>
                 <div class="team-content">
                     <h3>Victoria Santiago</h3>
-                    <h4>MT, CCMA, CST, Reflexologist, Body Sculpt Tech</h4>
+                    <h4>MT, CCMA, CST, Reflexologist, Body Sculpt Tech, Bodywork Practitioner</h4>
                 </div>
             </div>
             <div class="col wow fadeInUp">
                 <div class="team-photo team4"></div>
                 <div class="team-content">
                     <h3>Maria S.</h3>
-                    <h4>Esthecian, MT</h4>
+                    <h4>Esthecian, MT, Bodywork Practitioner</h4>
                 </div>
             </div>
         </div>
@@ -154,28 +154,28 @@
                 <div class="team-photo team5"></div>
                 <div class="team-content">
                     <h3>Kaheem Evans</h3>
-                    <h4>MT, CST, Body Sculpt Tech</h4>
+                    <h4>MT, CST, Body Sculpt Tech, Bodywork Practitioner</h4>
                 </div>
             </div>
             <div class="col wow fadeInUp">
                 <div class="team-photo team7"></div>
                 <div class="team-content">
                     <h3>Flor Richiez</h3>
-                    <h4>Esthetician, MT</h4>
+                    <h4>Esthetician, MT, Bodywork Practitioner</h4>
                 </div>
             </div>
             <div class="col wow fadeInUp">
                 <div class="team-photo team8"></div>
                 <div class="team-content">
                     <h3>Michael M.</h3>
-                    <h4>CCMA, Massage Therapist, Medical Assistant for Physician, Stretch Therapist, Body Sculpt Tech</h4>
+                    <h4>CCMA, Massage Therapist, Medical Assistant for Physician, Stretch Therapist, Body Sculpt Tech, Bodywork Practitioner</h4>
                 </div>    
             </div>
             <div class="col wow fadeInUp">
                 <div class="team-photo team9"></div>
                 <div class="team-content">
                     <h3>Yvette Stevenson</h3>
-                    <h4>MSN, APRN, FNP-C, Medical Director</h4>
+                    <h4>MSN, APRN, FNP-C, Medical Director, Bodywork Practitioner</h4>
                 </div>
             </div>
         </div>
