--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                 <div class="team-photo team2"></div>
                 <div class="team-content">
                     <h3>Abrina I.</h3>
-                    <h4>Master Esthecian, Reflexologist, Bodywork Practitioner</h4>
+                    <h4>Master Esthecian, Reflexologist</h4>
                 </div>
             </div>
             <div class="col wow fadeInUp">
@@ -175,7 +175,7 @@
                 <div class="team-photo team9"></div>
                 <div class="team-content">
                     <h3>Yvette Stevenson</h3>
-                    <h4>MSN, APRN, FNP-C, Medical Director, Bodywork Practitioner</h4>
+                    <h4>MSN, APRN, FNP-C, Medical Director</h4>
                 </div>
             </div>
         </div>
