--- a/index.html
+++ b/index.html
@@ -138,14 +138,14 @@
                 <div class="team-photo team3"></div>
                 <div class="team-content">
                     <h3>Victoria Santiago</h3>
-                    <h4>MT, CCMA, CST, Reflexologist, Body Sculpt Tech, Bodywork Practitioner</h4>
+                    <h4>CCMA, CST, Reflexologist, Body Sculpt Tech, Bodywork Practitioner</h4>
                 </div>
             </div>
             <div class="col wow fadeInUp">
                 <div class="team-photo team4"></div>
                 <div class="team-content">
                     <h3>Maria S.</h3>
-                    <h4>Esthecian, MT, Bodywork Practitioner</h4>
+                    <h4>Esthecian, Bodywork Practitioner</h4>
                 </div>
             </div>
         </div>
@@ -154,21 +154,21 @@
                 <div class="team-photo team5"></div>
                 <div class="team-content">
                     <h3>Kaheem Evans</h3>
-                    <h4>MT, CST, Body Sculpt Tech, Bodywork Practitioner</h4>
+                    <h4>CST, Body Sculpt Tech, Bodywork Practitioner</h4>
                 </div>
             </div>
             <div class="col wow fadeInUp">
                 <div class="team-photo team7"></div>
                 <div class="team-content">
                     <h3>Flor Richiez</h3>
-                    <h4>Esthetician, MT, Bodywork Practitioner</h4>
+                    <h4>Esthetician, Bodywork Practitioner</h4>
                 </div>
             </div>
             <div class="col wow fadeInUp">
                 <div class="team-photo team8"></div>
                 <div class="team-content">
                     <h3>Michael M.</h3>
-                    <h4>CCMA, Massage Therapist, Medical Assistant for Physician, Stretch Therapist, Body Sculpt Tech, Bodywork Practitioner</h4>
+                    <h4>CCMA, Medical Assistant for Physician, Stretch Therapist, Body Sculpt Tech, Bodywork Practitioner</h4>
                 </div>    
             </div>
             <div class="col wow fadeInUp">
